--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -49,11 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "faewfa, who is 32 years old, and lives in adfa has 2499.7 dollars left from her salary after expenses. It is True that she has more than $500 left.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "name = input(\"Name: \")\n",
+    "age = int(input(\"Age: \"))\n",
+    "address = input(\"Address: \")\n",
+    "salary = int(input(\"Salary: \"))\n",
+    "expenses = float(input(\"Expenses: \"))\n",
+    "\n",
+    "remaining_salary = salary - expenses\n",
+    "is_salary_good = remaining_salary >= 500 \n",
+    "\n",
+    "print(f\"{name}, who is {age} years old, and lives in {address} has {round(remaining_salary, 1)} dollars left from her salary after expenses. It is {is_salary_good} that she has more than $500 left.\")"
    ]
   },
   {
@@ -85,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +120,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "259\n",
+      "['some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'some', 'say', 'in', 'ice', 'from', 'what', 'i’ve', 'tasted', 'of', 'desire', 'i', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'but', 'if', 'it', 'had', 'to', 'perish', 'twice', 'i', 'think', 'i', 'know', 'enough', 'of', 'hate', 'to', 'say', 'that', 'for', 'destruction', 'ice', 'is', 'also', 'great', 'and', 'would', 'suffice', 'python', 'is', 'awesome!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "import re\n",
+    "\n",
+    "pattern = \"[,.]\"\n",
+    "\n",
+    "new_poem = poem.replace(\"\\n\", \" \")\n",
+    "\n",
+    "new_poem = re.sub(pattern, \"\", new_poem)\n",
+    "new_poem = new_poem.lower()\n",
+    "new_poem += \" python is awesome!\"\n",
+    "print(len(new_poem))\n",
+    "poem_list = new_poem.split(\" \")\n",
+    "print(poem_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ironhack_prework",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
